style.css
* {
  box-sizing: border-box;
}

html,
body {
  min-height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
  overflow-x: hidden;
}

h1,
h2,
h3 {
  color: rgb(42, 42, 163);
  font-family: Georgia, "Times New Roman", Times, serif;
}

h1 {
  font-size: 90px;
  /* color: red; */
}

h2 {
  font-size: 0.7rem;
}

h3 {
  font-size: 0.6rem;
}
#header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0px;
  background-color: #e3e6f3;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
  z-index: 999;
  position: sticky;
  left: 0;
  top: 0;
  right: 0;
  background-image: linear-gradient(to top left, #0072ff, #00c6ff);
}
#navbar {
  display: flex;
  align-items: center;
  justify-content: center;
}
#navbar li {
  list-style-type: none;
  padding: 0 20px;
  position: relative;
}
#navbar li a {
  text-decoration: none;
  font-size: 16px;
  font-weight: 600;
  color: white;
  transition: 0.3s ease;
  white-space: nowrap;
}
#navbar li a:hover,
#navbar li a.active {
  color: white;
}
#navbar li a.active::after,
#navbar li a:hover::after {
  content: "";
  width: 40%;
  height: 3px;
  background-color: #7865aa;
  position: absolute;
  bottom: -4px;
  left: 20px;
}

#header-logo {
  border: 4px solid rgb(211, 211, 238);
  border-radius: 50%;
  z-index: 100;
}

.logo {
  width: 200px;
}
#header-logo .logo {
  border-radius: 50%;
}

#hero {
  /* background-image: url(images/3.png); */
  /* height: 90vh; */
  width: 100%;
  /* background-position: top 0% left 90%; */
  /* background-size: cover; */
  background: linear-gradient(to bottom right, #00c6ff, #0072ff);
  padding: 10px 0;
  padding-left: 10px;
  display: flex;
  align-items: flex-end;
  justify-content: flex-start;
  flex-direction: column;
  font-size: 15px;
}

#hero h1,
#hero h2,
#hero p {
  margin: 0;
  padding-bottom: 15px;
  padding-right: 10px;
}
#hero h1 {
  color: #0072ff;
}

.button {
  display: inline-block;
  padding: 12px 28px;
  margin: 10px;
  font-size: 24px;
  font-weight: bold;
  text-transform: uppercase;
  color: #fff;
  background-image: linear-gradient(to bottom right, #00c6ff, #0072ff);
  border: none;
  border-radius: 40px;
  box-shadow: 0px 4px 0px #0072ff;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
}
.button:hover {
  transform: translateY(-2px);
  box-shadow: 0px 6px 0px #0072ff;
}
.button:active {
  transform: translateY(0px);
  box-shadow: none;
  background-image: linear-gradient(to bottom right, #0072ff, #00c6ff);
}
.button:before,
.button:after {
  content: "";
  position: absolute;
  width: 0;
  height: 0;
}
.button:before {
  top: -3px;
  left: -3px;
  border-radius: 40px;
  border-top: 3px solid #fff;
  border-left: 3px solid #fff;
}
.button:after {
  bottom: -3px;
  right: -3px;
  border-radius: 40px;
  border-bottom: 3px solid #fff;
  border-right: 3px solid #fff;
}

#parent-container {
  display: flex;
  flex-direction: column;
  gap: 20px;
  /* padding: 20px; */
}

#product1,
#product2 {
  display: flex;
  flex-direction: column;
  text-align: center;
  margin: 10px;
}

#product1 .pro-container,
#product2 .pro-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr); /* 2 columns layout */
  gap: 20px;
  justify-content: space-between;
  padding: 20px;
  flex-wrap: wrap;
}

#product1 .pro,
#product2 .pro {
  min-width: 150px;
  padding: 10px 12px;
  border: 1px solid #cce7d0;
  border-radius: 25px;
  cursor: pointer;
  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
  margin: 15px 0;
  transition: 0.2s ease;
  position: relative;
}

#product1 .pro img,
#product2 .pro img {
  width: 100%;
  border-radius: 20px;
}

#product1 .pro:hover,
#product2 .pro:hover {
  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
}

#product1 .pro .des,
#product2 .pro .des {
  text-align: start;
  padding: 10px 0;
}

#product1 .pro .des span,
#product2 .pro .des span {
  color: #606063;
  font-size: 22px;
}

#product1 .pro .des h5,
#product2 .pro .des h5 {
  padding-top: 7px;
  color: #1a1a1a;
  font-size: 22px;
  margin: 0;
}

#product1 .pro .des i,
#product2 .pro .des i {
  font-size: 12px;
  color: rgb(243, 181, 25);
}

#product1 .pro .des h4,
#product2 .pro .des h4 {
  padding-top: 7px;
  font-size: 22px;
  font-weight: 700;
  color: #088178;
}

#product1 .pro .fa-cart-shopping,
#product2 .pro .fa-cart-shopping {
  width: 40px;
  height: 40px;
  line-height: 40px;
  border-radius: 50px;
  background-color: #e8f6ea;
  color: #088178;
  border: 1px solid #cced70;
  position: absolute;
  bottom: 20px;
  right: 10px;
}

@media screen and (max-width: 768px) {
  .nav1-2 ul {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  .nav1-2 li {
    list-style-type: none;
    margin: 0 5px;
    padding: 2px;
    position: relative;
    border-radius: 10px;
    border: 2px solid #cce7d0;
    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
    background-image: linear-gradient(to bottom right, #cce7d0, #00c6ff);
  }
  .nav1-2 li a {
    text-decoration: none;
    color: white;
    transition: all 0.2s ease-in-out;
    cursor: pointer;
    text-decoration: none;
  }
  .nav1-2 li a h2 {
    font-size: 10px;
    color: #1f6d83;
  }
  .nav1-2 li:hover {
    color: rgba(0, 174, 255, 0.158);
    background-color: rgb(173, 233, 181);
    transform: translateY(-1px);
  }

  .nav1-2 li:active {
    transform: translateY(0px);
    box-shadow: none;
  }
  .nav1-2 li a:before,
  .nav1-2 li a:after {
    content: "";
    position: absolute;
    width: 0;
    height: 0;
  }
  nav1-2 li a:before {
    top: -3px;
    left: -3px;
    border-radius: 20px;
    border-top: 3px solid #fff;
    border-left: 3px solid #fff;
  }
  nav1-2 li a:after {
    border-radius: 20px;
    border-bottom: 3px solid #7431f0;
  }

  body {
    max-width: 768px;
    padding: 0px;
    margin: 0px;
    overflow-x: hidden;
  }

  #navbar {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    position: fixed;
    top: 0;
    right: -300px;
    height: 100vh;
    width: 300px;
    background-color: #e3e6f3;
    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
    padding: 80px 0 0 10px;
    transition: 0.3s;
  }
  #navbar li {
    margin-bottom: 25px;
  }

  #header {
    display: flex;
    flex-direction: column;
    padding: 1px;
  }
  h1 {
    font-size: 0.8rem;
  }
  h2 {
    font-size: 0.7rem;
  }
  h3 {
    font-size: 0.6rem;
  }

  p {
    font-size: 0.6rem;
  }
  hr {
    height: 3px;
    width: 90%;
  }

  #hero {
    left: 0;
  }

  .button {
    display: inline-block;
    padding: 2px 10px;
    margin: 5px;
    font-size: 10px;
    font-weight: bold;
    text-transform: uppercase;
    color: #fff;
    background-image: linear-gradient(to bottom right, #00c6ff, #0072ff);
    border: none;
    border-radius: 20px;
    box-shadow: 0px 4px 0px #0072ff;
    transition: all 0.2s ease-in-out;
    cursor: pointer;
  }
  /* .nav1-2 {
    display: block;
  } */

  .pro img {
    height: 80px;
    width: 80px;
    padding-bottom: 0px;
  }

  #parent-container {
    display: flex;
    flex-direction: column;
    gap: 5px;
  }

  #product1,
  #product2 {
    width: 100%;
    text-align: center;
  }

  #product1 .pro-container,
  #product2 .pro-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 10px;
    justify-content: space-between;
    padding: 10px 0;
  }

  #product1 .pro,
  #product2 .pro {
    width: 100%;
    min-width: 150px;
    padding: 8px 10px;
    border: 1px solid #cce7d0;
    border-radius: 25px;
    cursor: pointer;
    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
    margin: 5px 0;
    transition: 0.2s ease;
    position: relative;
  }

  #product1 .pro:hover,
  #product2 .pro:hover {
    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
  }

  #product1 .pro img,
  #product2 .pro img {
    width: 100%;
    border-radius: 20px;
  }

  #product1 .pro .des,
  #product2 .pro .des {
    text-align: start;
    padding: 5px 0;
  }

  #product1 .pro .des span,
  #product2 .pro .des span {
    color: #606063;
    font-size: 12px;
  }

  #product1 .pro .des h5,
  #product2 .pro .des h5 {
    padding-top: 7px;
    color: #1a1a1a;
    font-size: 12px;
    margin: 0;
  }

  #product1 .pro .des i,
  #product2 .pro .des i {
    font-size: 12px;
    color: rgb(243, 181, 25);
  }

  #product1 .pro .des h4,
  #product2 .pro .des h4 {
    padding-top: 7px;
    font-size: 12px;
    font-weight: 700;
    color: #088178;
  }

  #product1 .pro .fa-cart-shopping,
  #product2 .pro .fa-cart-shopping {
    width: 40px;
    height: 40px;
    line-height: 40px;
    border-radius: 50px;
    background-color: #e8f6ea;
    color: #088178;
    border: 1px solid #cced70;
    position: absolute;
    bottom: 10px;
    right: 10px;
  }
}

